--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^17.0.1",
     "react-router-bootstrap": "^0.25.0",
     "react-scripts": "4.0.3",
+    "react-stripe-elements": "^6.1.2",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
